fixing annoying alignment

--- a/sites/all/modules/custom/commerce_reservations/theme/reservations.css
+++ b/sites/all/modules/custom/commerce_reservations/theme/reservations.css
@@ -445,6 +445,12 @@ body.page-reservations #main-content #squeeze{
   padding:0;
 }
 
+.page-reservations .form-item-line-item-fields-field-reservation-dates-und-0-value-ampm,
+.page-reservations .form-item-line-item-fields-field-reservation-dates-und-0-value2-ampm {
+  position:relative;
+  top: -3px;
+}
+
 .page-reservations .qtip-content .add-to-cart .form-wrapper .field-name-field-commercial-reservation{
 	display: none !important;
 }
